# hardcaml_zprize

./: .gitignore  .gitmodules  .ocamlformat  COPYRIGHT.md  LICENSE-MIT  README.md  dune-project  opam  opam.locked
.github/workflow/: main.yml
.github/workflows/: main.yml
ark_bls12_377_g1/src/: ark_bls12_377_g1.ml  ark_bls12_377_g1.mli  dune
ark_bls12_377_g1/test/: dune  test_ark_bls12_377_g1.ml
docs/: index.mld  odoc.css
docs/zprize/: index.html  ntt.html  zprize_ntt.html  zprize_ntt_build_instructions.html  zprize_ntt_cpp_kernel.html  zprize_ntt_hardcaml_kernel.html  zprize_ntt_top.html
elliptic_curve/fpga/: .gitignore
elliptic_curve/lib/: config_presets.ml  config_presets.mli  dune  ec_fpn_dbl.ml  ec_fpn_dbl.mli  ec_fpn_mixed_add.ml  ec_fpn_mixed_add.mli  ec_fpn_ops_config.mli  point.ml
elliptic_curve/test/: ec_fpn_model.ml  ec_fpn_model.mli  test_ec_fpn_dbl.ml  test_ec_fpn_dbl_with_barrett_reduction.ml  test_ec_fpn_dbl_with_barrett_reduction.mli  test_ec_fpn_dbl_with_montgomery_mult.ml  test_ec_fpn_mixed_add.ml  test_ec_fpn_mixed_add.mli  test_ec_fpn_mixed_add_with_montgomery_mult.ml
field_ops/fpga/: .gitignore
field_ops/model/: approx_msb_multiplier_model.ml  barrett_reduction_model.ml  dune
field_ops/src/: adder_subtractor_pipe.ml  adder_subtractor_pipe.mli  approx_msb_multiplier.ml  arbitrate.mli  barrett_mult.ml  barrett_mult.mli  barrett_reduction.ml  barrett_reduction.mli  config_presets.ml  config_presets.mli  (+21 more)
fpga/montgomery_mult/: dune  montgomery_mult.xdc
fpga/point_dbl/: dune  point_dbl.xdc
host_compute/: .gitignore  README.md
libs/field_ops/model/: approx_msb_multiplier_model.ml  barrett_reduction_model.ml  dune
libs/hardcaml_ntt/test/: dune  test_bit_reversal.ml  test_gf.ml  test_ntt_4step.ml  test_ntt_hw.ml  test_ntt_hw.mli  test_ntt_roundtrip.ml  test_transposer.ml  test_twidddle.ml
libs/rust/ark_bls12_381_g1/: Cargo.toml
libs/rust/ark_bls12_381_g1/src/: lib.rs
ntt/: NOTES.md
root/: index.html
rust/: Cargo.toml
rust/ark_bls12_377_g1/: Cargo.toml
rust/ark_bls12_377_g1/src/: lib.rs
rust/experiment/src/: main.rs
rust/src/: main.rs
scripts/: create_zprize_ntt_submission.sh  deploy-docs-to-gh-pages  ntt_regression.sh  pippenger_regression.sh  run_vivado.tcl
shared/fpga/montgomery_square/: dune
shared/fpga/point_add/: dune
shared/fpga/point_double/: dune
shared/fpga/specialized_43x43_multiplier/: dune
shared/fpga/specialized_45x45_multiplier/: dune
shared/fpga/verilog_43x43_multiplier/: dune
src/: adder_pipe.ml  adder_pipe.mli  adder_subtractor_pipe.ml  adder_subtractor_pipe.mli  barrett_reduction.ml  barrett_reduction.mli  dune  ec_fpn_dbl.ml  ec_fpn_dbl.mli  extended_euclidean.ml  extended_euclidean.mli  full_width_multiplier.ml  full_width_multiplier.mli  ground_multiplier.ml  ground_multiplier.mli  half_width_multiplier.ml  half_width_multiplier.mli  karatsuba_ofman_mult.ml  karatsuba_ofman_mult.mli  modulo_adder_pipe.ml  modulo_adder_pipe.mli  modulo_double_pipe.ml  modulo_double_pipe.mli  modulo_fourfold_pipe.ml  modulo_fourfold_pipe.mli  modulo_subtractor_pipe.ml  modulo_subtractor_pipe.mli  modulo_triple_pipe.ml  modulo_triple_pipe.mli  montgomery_mult.ml  montgomery_mult.mli  montgomery_reduction.mli  multiplier_input.ml  radix.ml  radix.mli  reg_with_enable.ml  reg_with_enable.mli  squarer.ml  squarer.mli  subtracter_pipe.ml  (+2 more)
test/: ark_bls12_377_g1.ml  ark_bls12_377_g1.mli  dune  test_adder_pipe.ml  test_adder_subtractor_pipe.ml  test_adder_subtractor_pipe.mli  test_ark_bls12_377_g1.ml  test_barrett_reduction.ml  test_ec_fpn_dbl.ml  test_ec_fpn_dbl.mli  test_ec_fpn_dbl_with_barrett_reduction.ml  test_ec_fpn_dbl_with_barrett_reduction.mli  test_ec_fpn_dbl_with_montgomery_mult.ml  test_ground_multipliers.ml  test_half_width_multiplier.ml  test_karatsub_ofman_mult.ml  test_karatsuba_ofman_mult.ml  test_karatsuba_ofman_mult.mli  test_modulo_adder_pipe.ml  test_modulo_subtractor_pipe.ml  test_montgomery_mult.ml  test_squarer.ml  test_subtractor_pipe.ml  test_subtractor_pipe.mli  test_subtrator_pipe.ml  utils.ml  utils.mli
twisted_edwards_model/: conversions.ml  toneli_shank.ml  twisted_edwards_curve.ml  weierstrass_curve.ml
vitis_infrastructure/: README.md
zprize/msm/test/: affine_point_buffer.ml  affine_point_buffer.mli  dune  scalar_buffer.ml  scalar_buffer.mli  setup_stream.ml  setup_stream.mli  test_double_fault.ml  test_result_pushback.ml  test_stub_functions.ml  test_successive_invocations.ml  test_top.ml  test_top.mli  test_wiggle_tvalid.ml  zprize_msm_test_stubs.c
zprize/msm_pippenger/fpga/krnl_msm_pippenger/: .gitignore  dune  kernel_ports.tcl  rtl_checksum.md5
zprize/msm_pippenger/host/: .gitignore  CMakeLists.txt  Makefile  README.md  host.cpp  host_msm.cpp
zprize/msm_pippenger/host/benchmark/: CMakeLists.txt  CMakeLists.txt.in  bench_point_arithmetic.cpp  utils.h
zprize/msm_pippenger/host/driver/: CMakeLists.txt  driver.cpp  host_buckets.cpp  host_msm.cpp
zprize/msm_pippenger/host/executable/: CMakeLists.txt  generateConstants.cpp  hostFinish.cpp
zprize/msm_pippenger/host/include/bls12_377_g1/: pippenger.h
zprize/msm_pippenger/host/msm_compute/: CMakeLists.txt
zprize/msm_pippenger/host/msm_compute/include/bls12_377_g1/: bls12_377_g1.h  constants.h  log_time.h  pippenger.h  rust_types.h  zprize_msm_fpga_driver.h
zprize/msm_pippenger/host/naive_driver/: CMakeLists.txt  naive_driver.cpp
zprize/msm_pippenger/host/test/: CMakeLists.txt  MsmTests.cpp
zprize/msm_pippenger/host/zprize_msm_fpga/: CMakeLists.txt  zprize_msm_fpga.cpp  zprize_msm_fpga_driver.cpp  zprize_msm_fpga_driver.h
zprize/msm_pippenger/test_fpga_harness/: Cargo.toml  README.md  build.rs
zprize/msm_pippenger/test_fpga_harness/benches/: msm.rs
zprize/msm_pippenger/test_fpga_harness/cxx/: CMakeLists.txt  host
zprize/msm_pippenger/test_fpga_harness/src/: lib.rs  util.rs
zprize/msm_pippenger/test_fpga_harness/tests/: msm.rs  msm_unit_tests.rs
zprize/msm_pippenger/test_harness/libzprize_msm_fpga/: CMakeLists.txt  zprize_msm_fpga.cpp
zprize/msm_pippenger/test_naive_harness/cxx/: CMakeLists.txt
(+3144 files in other folders)
