[package]
name = "rust"
version = "0.1.0"
authors = ["fyquah <fyquah@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-377 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
snarkvm-utilities = "0.2.3"
