(rule
 (targets montgomery_mult.v)
 (deps ../../bin/generate/verilog.exe)
 (action
  (run %{deps} montgomery-mult -o montgomery_mult.v)))

; Runs vivado to generate output reports.

(rule
 (alias build-fpga)
 (targets post_synth_utilization.rpt post_synth_timing.rpt)
 (deps montgomery_mult.v ../../scripts/run_vivado.tcl)
 (action
  (run vivado -mode batch -source ../../scripts/run_vivado.tcl -tclargs montgomery_mult)))
