(rule
 (targets point_dbl.v)
 (deps ../../bin/generate/verilog.exe)
 (action
  (run %{deps} point-dbl -o point_dbl.v)))

; Runs vivado to generate output reports.

(rule
 (alias build-fpga)
 (targets post_synth_utilization.rpt post_synth_timing.rpt)
 (deps point_dbl.v ../../scripts/run_vivado.tcl)
 (action
  (run vivado -mode batch -source ../../scripts/run_vivado.tcl -tclargs point_dbl)))
