(library
 (name field_ops_model)
 (public_name zprize.field_ops_model)
 (libraries base bignum core zarith hardcaml)
 (inline_tests)
 (preprocess
  (pps ppx_jane)))

(rule
 (deps ../bin/modulus/modulus.exe)
 (targets modulus.ml)
 (action (with-stdout-to modulus.ml (run ../bin/modulus/modulus.exe))))
