[package]
name = "ark_bls12_381_g1"
version = "0.1.0"
authors = ["fyquah <fyquah@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381 = "0.3.0"
ark-ec = "0.3.0"
libc = "*"
ark-ff = "0.3.0"

[lib]
crate-type = ["cdylib"]
