(rule
 (target montgomery_square.v)
 (deps ../../bin/generate/verilog.exe)
 (action
  (run %{deps} montgomery-mult -squarer -o %{target})))

; Runs vivado to generate output reports.

(rule
 (alias build-fpga)
 (targets post_synth_utilization.rpt post_synth_timing.rpt)
 (deps montgomery_square.v montgomery_square.xdc ../../../scripts/run_vivado.tcl)
 (action
  (run
   vivado
   -mode
   batch
   -source
   ../../../scripts/run_vivado.tcl
   -tclargs
   montgomery_square)))
