(rule
 (targets point_double.v)
 (deps ../../bin/generate/verilog.exe)
 (action
  (run %{deps} point-double -o point_double.v)))

; Runs vivado to generate output reports.

(rule
 (alias build-fpga)
 (targets post_synth_utilization.rpt post_synth_timing.rpt)
 (deps point_double.v point_double.xdc ../../../scripts/run_vivado.tcl)
 (action
  (run
   vivado
   -mode
   batch
   -source
   ../../../scripts/run_vivado.tcl
   -tclargs
   point_double)))
