(rule
 (targets verilog_43x43_multiplier.v)
 (deps ../../bin/generate/verilog.exe)
 (action
  (run
   %{deps}
   verilog-43x43-multiplier
   -latency 3
   -o
   verilog_43x43_multiplier.v)))

; Runs vivado to generate output reports.

(rule
 (alias build-fpga)
 (targets post_synth_utilization.rpt post_synth_timing.rpt)
 (deps
  verilog_43x43_multiplier.v
  verilog_43x43_multiplier.xdc
  ../../../scripts/run_vivado.tcl)
 (action
  (run
   vivado
   -mode
   batch
   -source
   ../../../scripts/run_vivado.tcl
   -tclargs
   verilog_43x43_multiplier)))
