(copy_files
 (files ../driver/setup_stream.c))

(copy_files
 (files ../driver/setup_stream.h))

(library
 (name zprize_msm_test)
 (foreign_stubs
  (language c)
  (names zprize_msm_test_stubs setup_stream))
 (inline_tests)
 (libraries zprize_msm hardcaml_waveterm snarks_r_fun snarks_r_fun_test)
 (preprocess
  (pps ppx_jane ppx_deriving_hardcaml)))
