[package]
name = "blst-msm"
version = "0.1.0"
edition = "2018"

[features]
# By default, compile with ADX extension if the host supports it.
# Binary can be executed on systems similar to the host.
default = [ "quiet" ]
# Compile in portable mode, without ISA extensions.
# Binary can be executed on all systems.
portable = [ "blst/portable" ]
# Enable ADX even if the host CPU doesn't support it.
# Binary can be executed on Broadwell+ and Ryzen+ systems.
force-adx = [ "blst/force-adx" ]
bls12_377 = ["ark-bls12-377/curve"]
quiet = []

[dependencies]
blst = "^0"
rand = "^0"
rand_chacha = "^0"
ark-std = "0.3.0"
ark-ff = "0.3.0"
ark-ec = { version = "0.3.0", features = [ "parallel" ] }
ark-bls12-377 = { version = "0.3.0" }
ark-serialize = { version = "0.3.0" }
num-bigint = "^0"

[build-dependencies]
cc = "^1.0.70"
which = "^4.0"
cmake = "^0.1.48"

[dev-dependencies]
criterion = { version = "0.3", features = [ "html_reports" ] }
rayon = "1.5"
serial_test = "^0"

[[bench]]
name = "msm"
harness = false
