(rule
 (mode promote)
 (action (with-stdout-to krnl_msm_pippenger.v (run ../../hardcaml/bin/generate.exe kernel -scalar-bits 253))))

(rule
 (mode promote)
 (action (with-stdout-to rtl_checksum.md5 (run ../../hardcaml/bin/generate.exe rtl-checksum))))

(rule (target stub.sv) (action (write-file %{target} "")))

